syntax = "proto3";

package messaging;

// The messaging service definition.
service MessagingService {
  // Sends a message to a specified user.
  rpc SendMessage(SendRequest) returns (SendResponse);

  // Retrieves messages for a specified user.
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

// Request message for sending a message.
message SendRequest {
  string from_user = 1;
  string to_user = 2;
  string message = 3;
}

// Response message for sending a message.
message SendResponse {
  bool success = 1;
}

// Request message for getting messages.
message GetMessagesRequest {
  string user = 1;
}

// Response message containing messages.
message GetMessagesResponse {
  repeated string messages = 1;
}
